--- a/cardviewertemplate.html
+++ b/cardviewertemplate.html
@@ -6,6 +6,7 @@
   html, body {{
     margin:0;
     padding:0;
+    font-family: fantasy;
   }}
   img.seticon {{
     width:18px;
@@ -20,6 +21,10 @@
     height: 25px;
     width: 100%;
     background-color: #ffffff;
+    z-index: 10000;
+  }}
+  h3 {{
+    font-weight: normal;
   }}
   #cardlist {{
     margin-top: 25px;
@@ -28,25 +33,35 @@
     display: none;
   }}
   .cardtemplate {{
-    /*
-    height: 680px;
-    width: 488px;
-    */
-    height: 68px;
-    width: 48px;
+    height: 204px;
+    width: 147px;
     position: relative;
+    display: inline-block;
+  }}
+  .cardimage {{
+    height: 204px;
+    width: 147px;
   }}
   .cardname {{
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 6px;
+    left: 9px;
     font-size: 14px;
-    font-color: #fff;
+    width: 100%;
+  }}
+  .cardprice {{
+    position: absolute;
+    bottom: 6px;
+    right:9px;
+    text-align: right;
+    font-size: 20px;
+    width: 100%;
   }}
   .whiteblack {{
-    font-color: #fff;
-    text-shadow: 2px 2px 1px #000,-2px -2px 1px #000,-2px 2px 1px #000,2px -2px 1px #000;
+    color: #fff;
+    text-shadow: 0px 0px 3px #000,0px 0px 3px #000,0px 0px 3px #000,0px 0px 3px #000;
   }}
+
 </style>
 <script>
   var imagekey = "image_uri";
@@ -66,8 +81,8 @@
   <div id="cardlist"></div>
   <div class="cardtemplate hidden">
     <img class="cardimage" />
-    <span class="cardname"></span>
-    <span class="cardprice whiteblack"></span>
+    <div class="cardname whiteblack"></div>
+    <div class="cardprice whiteblack"></div>
   </div>
   <script>
     var scaler = document.getElementById("scaler");
